--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
 	<header>
 		<a href="index.html" class="logo-holder">
-			<div class="logo"><img src="/imgs/logo.png" alt="TF" width="100%" /></div>
+			<div class="logo"><img src="imgs/logo.png" alt="TF" width="100%" /></div>
 			<div class="logo-text">Site Web Portfolio</div>
 		</a>
 		<nav>
@@ -24,22 +24,22 @@
 					<a href="index.html">Accueil</a>
 				</li>
 				<li>
-					<a href="/pages_html/comp_info.html">Compétences</a>
+					<a href="pages_html/comp_info.html">Compétences</a>
 				</li>
 				<li>
-					<a href="/pages_html/parcours.html">Parcours</a>
+					<a href="pages_html/parcours.html">Parcours</a>
 				</li>
         		<li>
-					<a href="/pages_html/matieres.html">Matières</a>
+					<a href="pages_html/matieres.html">Matières</a>
 				</li>
 				<li>
-					<a href="/pages_html/exp_pro.html">Experiences</a>
+					<a href="pages_html/exp_pro.html">Experiences</a>
 				</li>
 				<li>
-					<a href="/pages_html/qualites.html">Passions</a>
+					<a href="pages_html/qualites.html">Passions</a>
 				</li>
         		<li>
-					<a href="/pages_html/quiz.html">Quiz</a>
+					<a href="pages_html/quiz.html">Quiz</a>
 				</li>
 			</ul>
 			<a href="#" class="mobile-toggle" onClick="toggleMobileMenu();">
@@ -68,7 +68,7 @@
 						motivé, je suis toujours prêt à apprendre
 						de nouvelles choses.</p>
 					<div class="call-to-action">
-						<a href="/resources/CV_Taher_Fetoui.pdf" class="button black" target="_blank">
+						<a href="resources/CV_Taher_Fetoui.pdf" class="button black" target="_blank">
 							Voir CV
 						</a>
 						<a href="mailto:taherfetouii@gmail.com" class="button">
@@ -77,51 +77,51 @@
 					</div>
 					<div class="social-links">
 						<a href="https://www.facebook.com/TaherFetoui06" target="_blank">
-							<img src="/imgs/Facebook.png" alt="Facebook" width="40" />
+							<img src="imgs/Facebook.png" alt="Facebook" width="40" />
 						</a>
 						<a href="https://www.instagram.com/taher_fetoui/" target="_blank">
-							<img src="/imgs/Instagram.png" alt="Instagram" width="65" />
+							<img src="imgs/Instagram.png" alt="Instagram" width="65" />
 						</a>
 						<a href="https://github.com/TaherFetoui" target="_blank">
-							<img src="./imgs/github.png" alt="GitHub" width="48" />
+							<img src="imgs/github.png" alt="GitHub" width="48" />
 						</a>
 					</div>
 				</div>
 			</div>
 			<div class="hero-yellow">
-				<img src="/imgs/tf.png" alt="Taher Fetoui" width="100%" />
+				<img src="imgs/tf.png" alt="Taher Fetoui" width="100%" />
 			</div>
 		</section>
 		<section class="logos container">
 			<div class="marquee">
 				<div class="track">
-					<img src="./imgs/html.png" alt="HTML" width="100" />
-					<img src="./imgs/css.png" alt="CSS" width="100" />
-					<img src="./imgs/javascript.png" alt="JS" width="100" />
-					<img src="./imgs/nodejs.png" width="100" alt="NodeJs" />
-					<img src="./imgs/java.png" width="100" alt="Java" />
-					<img src="./imgs/python.png" width="100" alt="Python" />
-					<img src="./imgs/php.png" alt="PHP" width="100" />
-					<img src="./imgs/c.png" alt="C" width="100" />
-					<img src="./imgs/csharp.png" alt="C Sharp" width="100" />
-					<img src="./imgs/flutter.png" width="100" alt="Flutter" />
-					<img src="./imgs/dotnet.png" width="100" alt=".Net" />
-					<img src="./imgs/mssql.png" width="100" alt="MSSQL" />
-					<img src="./imgs/vscode.png" width="100" alt="VSCode" />
+					<img src="imgs/html.png" alt="HTML" width="100" />
+					<img src="imgs/css.png" alt="CSS" width="100" />
+					<img src="imgs/javascript.png" alt="JS" width="100" />
+					<img src="imgs/nodejs.png" width="100" alt="NodeJs" />
+					<img src="imgs/java.png" width="100" alt="Java" />
+					<img src="imgs/python.png" width="100" alt="Python" />
+					<img src="imgs/php.png" alt="PHP" width="100" />
+					<img src="imgs/c.png" alt="C" width="100" />
+					<img src="imgs/csharp.png" alt="C Sharp" width="100" />
+					<img src="imgs/flutter.png" width="100" alt="Flutter" />
+					<img src="imgs/dotnet.png" width="100" alt=".Net" />
+					<img src="imgs/mssql.png" width="100" alt="MSSQL" />
+					<img src="imgs/vscode.png" width="100" alt="VSCode" />
 					
-					<img src="./imgs/html.png" alt="HTML" width="100" />
-					<img src="./imgs/css.png" alt="CSS" width="100" />
-					<img src="./imgs/javascript.png" alt="JS" width="100" />
-					<img src="./imgs/nodejs.png" width="100" alt="NodeJs" />
-					<img src="./imgs/java.png" width="100" alt="Java" />
-					<img src="./imgs/python.png" width="100" alt="Python" />
-					<img src="./imgs/php.png" alt="PHP" width="100" />
-					<img src="./imgs/c.png" alt="C" width="100" />
-					<img src="./imgs/csharp.png" alt="C Sharp" width="100" />
-					<img src="./imgs/flutter.png" width="100" alt="Flutter" />
-					<img src="./imgs/dotnet.png" width="100" alt=".Net" />
-					<img src="./imgs/mssql.png" width="100" alt="MSSQL" />
-					<img src="./imgs/vscode.png" width="100" alt="VSCode" />
+					<img src="imgs/html.png" alt="HTML" width="100" />
+					<img src="imgs/css.png" alt="CSS" width="100" />
+					<img src="imgs/javascript.png" alt="JS" width="100" />
+					<img src="imgs/nodejs.png" width="100" alt="NodeJs" />
+					<img src="imgs/java.png" width="100" alt="Java" />
+					<img src="imgs/python.png" width="100" alt="Python" />
+					<img src="imgs/php.png" alt="PHP" width="100" />
+					<img src="imgs/c.png" alt="C" width="100" />
+					<img src="imgs/csharp.png" alt="C Sharp" width="100" />
+					<img src="imgs/flutter.png" width="100" alt="Flutter" />
+					<img src="imgs/dotnet.png" width="100" alt=".Net" />
+					<img src="imgs/mssql.png" width="100" alt="MSSQL" />
+					<img src="imgs/vscode.png" width="100" alt="VSCode" />
 				</div>
 			</div>
 		</section>
@@ -129,7 +129,7 @@
 			<h2>Instut International de Technologie</h2>
 			<div class="video-wrapper">
 				<video controls autoplay muted>
-					<source src="/resources/iit.mp4" type="video/mp4">
+					<source src="resources/iit.mp4" type="video/mp4">
 					Votre navigateur ne supporte pas l'élément vidéo.
 				</video>
 			</div>
