--- a/pages_html/qualites.html
+++ b/pages_html/qualites.html
@@ -7,15 +7,15 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
-	<link rel="stylesheet" href="/css/style.css">
-  <link rel="stylesheet" href="/bootstrap/bootstrap.css"/>
-	<script src="/js/scripts.js"></script>
-    <link rel="icon" type="image/png" href="/imgs/logo.png">
+	<link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="bootstrap/bootstrap.css"/>
+	<script src="js/scripts.js"></script>
+    <link rel="icon" type="image/png" href="imgs/logo.png">
 </head>
 <body>
 	<header>
 		<a href="../index.html" class="logo-holder">
-			<div class="logo"><img src="/imgs/logo.png" alt="TF" width="100%" /></div>
+			<div class="logo"><img src="imgs/logo.png" alt="TF" width="100%" /></div>
 			<div class="logo-text">Site Web Portfolio</div>
 		</a>
 		<nav>
@@ -24,22 +24,22 @@
 					<a href="../index.html">Accueil</a>
 				</li>
 				<li>
-					<a href="/pages_html/comp_info.html">Compétences</a>
+					<a href="pages_html/comp_info.html">Compétences</a>
 				</li>
 				<li>
-					<a href="/pages_html/parcours.html">Parcours</a>
+					<a href="pages_html/parcours.html">Parcours</a>
 				</li>
         		<li>
-					<a href="/pages_html/matieres.html">Matières</a>
+					<a href="pages_html/matieres.html">Matières</a>
 				</li>
 				<li>
-					<a href="/pages_html/exp_pro.html">Experiences</a>
+					<a href="pages_html/exp_pro.html">Experiences</a>
 				</li>
 				<li>
-					<a href="/pages_html/qualites.html">Passions</a>
+					<a href="pages_html/qualites.html">Passions</a>
 				</li>
         		<li>
-					<a href="/pages_html/quiz.html">Quiz</a>
+					<a href="pages_html/quiz.html">Quiz</a>
 				</li>
 			</ul>
 			<a href="#" class="mobile-toggle" onClick="toggleMobileMenu();">
@@ -59,25 +59,25 @@
 			</h2>
 			<div class="bento-grid">
 				<a href="#" class="bento-item">
-					<img src="/imgs/mv.png" alt="Formule1" width="100%" />
+					<img src="imgs/mv.png" alt="Formule1" width="100%" />
                     <figcaption>
                         Workplace - 1 General Informatique
                     </figcaption>
 				</a>
 				<a href="#" class="bento-item">
-					<img src="/imgs/tech.png" alt="Technologie" width="100%" />
+					<img src="imgs/tech.png" alt="Technologie" width="100%" />
 				</a>
 				<a href="#" class="bento-item">
-					<img src="/imgs/camp.png" alt="Camping" width="100%" />
+					<img src="imgs/camp.png" alt="Camping" width="100%" />
 				</a>
 				<a href="#" class="bento-item">
-					<img src="/imgs/bb.png" alt="Musculation" width="100%" />
+					<img src="imgs/bb.png" alt="Musculation" width="100%" />
 				</a>
 				<a href="#" class="bento-item">
-					<img src="/imgs/guitar.png" alt="Guitar" width="100%" />
+					<img src="imgs/guitar.png" alt="Guitar" width="100%" />
 				</a>
 				<a href="#" class="bento-item">
-					<img src="/imgs/roadtrip.png" alt="Voyage" width="100%" />
+					<img src="imgs/roadtrip.png" alt="Voyage" width="100%" />
                     <figcaption>
                         Workplace - 1 General Informatique
                     </figcaption>
