--- a/pages_html/quiz.html
+++ b/pages_html/quiz.html
@@ -7,14 +7,14 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
-	<link rel="stylesheet" href="/css/style.css">
-  <link rel="stylesheet" href="/bootstrap/bootstrap.css"/>
-  <link rel="icon" type="image/png" href="/imgs/logo.png">
+	<link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="bootstrap/bootstrap.css"/>
+  <link rel="icon" type="image/png" href="imgs/logo.png">
 </head>
 <body>
 	<header>
 		<a href="../index.html" class="logo-holder">
-			<div class="logo"><img src="/imgs/logo.png" alt="TF" width="100%" /></div>
+			<div class="logo"><img src="imgs/logo.png" alt="TF" width="100%" /></div>
 			<div class="logo-text">Site Web Portfolio</div>
 		</a>
 		<nav>
@@ -23,22 +23,22 @@
 					<a href="../index.html">Accueil</a>
 				</li>
 				<li>
-					<a href="/pages_html/comp_info.html">Compétences</a>
+					<a href="pages_html/comp_info.html">Compétences</a>
 				</li>
 				<li>
-					<a href="/pages_html/parcours.html">Parcours</a>
+					<a href="pages_html/parcours.html">Parcours</a>
 				</li>
         		<li>
-					<a href="/pages_html/matieres.html">Matières</a>
+					<a href="pages_html/matieres.html">Matières</a>
 				</li>
 				<li>
-					<a href="/pages_html/exp_pro.html">Experiences</a>
+					<a href="pages_html/exp_pro.html">Experiences</a>
 				</li>
 				<li>
-					<a href="/pages_html/qualites.html">Passions</a>
+					<a href="pages_html/qualites.html">Passions</a>
 				</li>
         		<li>
-					<a href="/pages_html/quiz.html">Quiz</a>
+					<a href="pages_html/quiz.html">Quiz</a>
 				</li>
 			</ul>
 			<a href="#" class="mobile-toggle" onClick="toggleMobileMenu();">
@@ -143,7 +143,7 @@
             <h3>Réponses Correctes :</h3>
             <ul id="correct-answers"></ul>
         </div>
-        <script src="/js/scripts.js"></script>
+        <script src="js/scripts.js"></script>
     </div>
     
 </body>
