--- a/pages_html/comp_info.html
+++ b/pages_html/comp_info.html
@@ -8,9 +8,9 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="../css/style.css">
-  <link rel="stylesheet" href="bootstrap/bootstrap.css"/>
-	<script src="js/scripts.js"></script>
-    <link rel="icon" type="image/png" href="imgs/logo.png">
+  <link rel="stylesheet" href="../bootstrap/bootstrap.css"/>
+	<script src="../js/scripts.js"></script>
+    <link rel="icon" type="image/png" href="../imgs/logo.png">
 </head>
 <body>
 	<header>
